--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 							<ul class="icons">
 								<li><a href="https://github.com/martinsps" class="icon brands style2 fa-github"><span class="label">Github</span></a></li>
 								<li><a href="https://www.linkedin.com/in/martín-sánchez-pedreño-sánchez-658585147" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="mailto:martinsps96@gmail.com" class="icon style2 fa-envelope"></a></li>
+								<li><a href="mailto:martinsps96@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</div>
 					</footer>
